tests/sema/fail/ref_store_in_struct.kl
struct Holder {
  int slot;
}

int main() {
  int a = 1;
  Holder h = Holder { 0 };
  h.slot = &a;
  return 0;
}
